--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
+    "cors": "^2.8.5",
     "fa-icons": "^0.2.0",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
