--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
     "fa-icons": "^0.2.0",
+    "flatted": "^3.2.9",
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
